--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
+
 .accordion-item {
     transition: border-radius 0.4s ease-in-out;
+}
+
+.cap-trim{
+    leading-trim: cap;
 }
